[tool.poetry]
name = "service-template"
version = "1.0.0"
description = ""
authors = ["Alejandro Hernandez <a.hernandez@traxion.global>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
